Fix Quiz body missing border

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,9 @@
 }
 
 .kanjiQuiz-quiz-body {
+    border-style: solid;
+    border-bottom-style: none;
+    border-width: 2px;
 }
 
 .kanjiQuiz-quiz-container {
